add comments to target parameters.  change default target/count.  add option to remove white from noshoot random colors (for red/green colorblind).   set random if count > physical targets or noshoots enabled.  larger/colored start/stop buttons

--- a/data/index.html
+++ b/data/index.html
@@ -50,6 +50,22 @@
 			margin-bottom: 13px;
 		}
 		
+		.run_actions, .cancel_actions {
+			border-radius: 5px;
+		        margin-left: 5px;
+			margin-right: 5px;
+			font-size: 30px;
+			padding: 30px;
+		}
+		
+		.run_actions {
+			background-color: lightgreen;
+		}
+
+		.cancel_actions {
+			background-color: lightsalmon;
+		}
+
 		.section_title {
 			font-weight: bold;
 			font-size: 20px;
